fix(input): fix addon alignment.

--- a/src/app/components/input/input.scss
+++ b/src/app/components/input/input.scss
@@ -98,7 +98,7 @@ $success-background-color: #E3F5EC;
   }
   > .label.-labelleft {
     text-align: right;
-    padding: 5px 5px 5px 0;
+    padding: 4px 4px 4px 0;
     display: table-cell;
   }
 
